Consolidade thread state endpoints
- Remove get state endpoint for threads, as that's covered by get thread
- Move updating state to patch thread endpoint, remove update state endpoint
- Update history endpoint with a simpler schema
