# openapi.json
@@ -306,126 +306,6 @@
         }
       }
     },
-    "/threads/{thread_id}/state": {
-      "get": {
-        "tags": [
-          "Threads"
-        ],
-        "summary": "Get Thread State",
-        "description": "Get state for a thread.\n\nThe latest state of the thread (i.e. latest checkpoint) is returned.",
-        "operationId": "get_latest_thread_state_threads__thread_id__state_get",
-        "parameters": [
-          {
-            "description": "The ID of the thread.",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid",
-              "title": "Thread Id",
-              "description": "The ID of the thread."
-            },
-            "name": "thread_id",
-            "in": "path"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ThreadState"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Not Found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Threads"
-        ],
-        "summary": "Update Thread State",
-        "description": "Add state to a thread.",
-        "operationId": "update_thread_state_threads__thread_id__state_post",
-        "parameters": [
-          {
-            "description": "The ID of the thread.",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid",
-              "title": "Thread Id",
-              "description": "The ID of the thread."
-            },
-            "name": "thread_id",
-            "in": "path"
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ThreadStateUpdate"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ThreadStateUpdateResponse"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Not Found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/threads/{thread_id}/history": {
       "get": {
         "tags": [
@@ -476,8 +356,7 @@
                   "items": {
                     "$ref": "#/components/schemas/ThreadState"
                   },
-                  "type": "array",
-                  "title": "Response Get Thread History Threads  Thread Id  History Get"
+                  "type": "array"
                 }
               }
             }
@@ -2309,6 +2188,34 @@
         ],
         "title": "Thread"
       },
+      "ThreadState": {
+        "properties": {
+          "thread_id": {
+            "type": "string",
+            "format": "uuid",
+            "title": "Thread Id",
+            "description": "The ID of the thread."
+          },
+          "checkpoint_id": {
+            "type": "string",
+            "format": "uuid",
+            "title": "Checkpoint Id",
+            "description": "The ID of the checkpoint."
+          },
+          "values": {
+            "type": "object",
+            "title": "Values",
+            "description": "The current state of the thread."
+          }
+        },
+        "type": "object",
+        "required": [
+          "thread_id",
+          "checkpoint_id",
+          "values"
+        ],
+        "title": "ThreadState"
+      },
       "ThreadCreate": {
         "properties": {
           "thread_id": {
@@ -2343,119 +2250,16 @@
             "type": "object",
             "title": "Metadata",
             "description": "Metadata to merge with existing thread metadata."
+          },
+          "values": {
+            "type": "object",
+            "title": "Values",
+            "description": "Values to merge with existing thread values."
           }
         },
         "type": "object",
         "title": "ThreadPatch",
-        "description": "Payload for creating a thread."
-      },
-      "ThreadState": {
-        "properties": {
-          "values": {
-            "anyOf": [
-              {
-                "items": {
-                  "type": "object"
-                },
-                "type": "array"
-              },
-              {
-                "type": "object"
-              }
-            ],
-            "title": "Values"
-          },
-          "next": {
-            "items": {
-              "type": "string"
-            },
-            "type": "array",
-            "title": "Next"
-          },
-          "checkpoint": {
-            "$ref": "#/components/schemas/CheckpointConfig",
-            "title": "Checkpoint"
-          },
-          "metadata": {
-            "type": "object",
-            "title": "Metadata"
-          },
-          "created_at": {
-            "type": "string",
-            "title": "Created At"
-          },
-          "parent_checkpoint": {
-            "type": "object",
-            "title": "Parent Checkpoint"
-          }
-        },
-        "type": "object",
-        "required": [
-          "values",
-          "next",
-          "checkpoint",
-          "metadata",
-          "created_at"
-        ],
-        "title": "ThreadState"
-      },
-      "ThreadStateUpdate": {
-        "properties": {
-          "values": {
-            "anyOf": [
-              {
-                "type": "object"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Values",
-            "description": "The values to update the state with."
-          },
-          "checkpoint": {
-            "$ref": "#/components/schemas/CheckpointConfig",
-            "title": "Checkpoint",
-            "description": "The checkpoint to update the state of."
-          }
-        },
-        "type": "object",
-        "title": "ThreadStateUpdate",
-        "description": "Payload for updating the state of a thread."
-      },
-      "ThreadStateUpdateResponse": {
-        "properties": {
-          "checkpoint": {
-            "type": "object",
-            "title": "Checkpoint"
-          }
-        },
-        "type": "object",
-        "title": "ThreadStateUpdateResponse",
-        "description": "Response for adding state to a thread."
-      },
-      "CheckpointConfig": {
-        "type": "object",
-        "title": "CheckpointConfig",
-        "description": "Checkpoint config.",
-        "properties": {
-          "thread_id": {
-            "type": "string",
-            "description": "Unique identifier for the thread associated with this checkpoint."
-          },
-          "checkpoint_ns": {
-            "type": "string",
-            "description": "Namespace for the checkpoint, used for organization and retrieval."
-          },
-          "checkpoint_id": {
-            "type": "string",
-            "description": "Optional unique identifier for the checkpoint itself."
-          },
-          "checkpoint_map": {
-            "type": "object",
-            "description": "Optional dictionary containing checkpoint-specific data."
-          }
-        }
+        "description": "Payload for updating a thread."
       },
       "StorePutRequest": {
         "type": "object",
